Fix weird blank space on mobile

--- a/res/style.css
+++ b/res/style.css
@@ -157,6 +157,7 @@ a:hover {
     #nav li {
         width: 100vw;
         padding: 0;
+        overflow-x: hidden;
     }
 }
 
